--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="icon-container">
-        <h1 class="fa-brands fa-dyalog" style="color: #74C0FC; font-size: 55px;"></h1>
+        <h1 class="fa-brands fa-dyalog" style="color: #1959e4; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-sterling-sign" style="color: #d90202; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-naira-sign" style="color: #74C0FC; font-size: 55px;"></h1>
-        <h1 class="fa-solid fa-chevron-down" style="color: #d90202; font-size: 55px;"></h1>
+        <h1 class="fa-solid fa-chevron-down" style="color: #ff8615; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-sterling-sign" style="color: #74C0FC; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-registered" style="color: #d90202; font-size: 55px;"></h1>
     </div>
 
     <div class="surname-container">
-        <h1 class="fa-solid fa-registered" style="color: #d90202; font-size: 55px;"></h1>
+        <h1 class="fa-solid fa-registered" style="color: #ff8615; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-tower-cell" style="color: #74C0FC; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-mill-sign" style="color: #d90202; font-size: 55px;"></h1>
-        <h1 class="fa-solid fa-bullseye" style="color: #74C0FC; font-size: 55px;"></h1>
+        <h1 class="fa-solid fa-bullseye" style="color: #1959e4; font-size: 55px;"></h1>
         <h1 class="fa-solid fa-section" style="color: #d90202; font-size: 55px;"></h1>
     </div>
 
